# cargo1

./: Cargo.toml
crate1/: Cargo.toml
crate2/: Cargo.toml
crate3/: Cargo.toml
crate4/: Cargo.toml
crate5/: Cargo.toml
subdir/crate3/: Cargo.toml
subdir/crate4/: Cargo.toml
