[package]
name = "workspace_example"
version = "0.1.0"
authors = ["Nikita Chashchinskii <nikita.chashchinskii@gmail.com>"]

[workspace]
members = [
    "crate1",
    "crate2",
    "subdir/crate3"
]

[dependencies]
crate4 = { path = "subdir/crate4", version = "0.1.0" }
crate5 = { path = "crate5", version = "0.1.0" }
serde = "0.8.0"